[project]
name = "kyma-knowledge-mcp"
version = "0.1.0"
description = "MCP server providing local Kyma knowledge and context for AI agents"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "chromadb>=1.5.9",
    "fastembed>=0.4.0",
    "flashrank>=0.2.0",
    "langchain-core>=1.4.7",
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.13.0",
]

[project.scripts]
kyma-knowledge-mcp = "kyma_knowledge_mcp.main:main"
kyma-knowledge-mcp-build-index = "kyma_knowledge_mcp.build_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kyma_knowledge_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
    "taskipy>=1.12.0",
]

[tool.taskipy.tasks]
lint = "ruff check . && ruff format --check . && mypy kyma_knowledge_mcp/"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "flashrank.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:chromadb",
]
